set color-scheme to light in global css, avoid dark mode overrides applied by the  system if set in dark mode in devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  color-scheme: light;
+}
+
 .blinking-cursor {
   display: inline-block;
   width: 2px;
